@@ -61,7 +61,7 @@ public interface ProcessingExceptionHandler extends Configurable {
      * @return a {@link Response} object
      */
     default Response handleError(final ErrorHandlerContext context, final Record<?, ?> record, final Exception exception) {
-        return new Response(ProcessingExceptionHandler.Result.from(handle(context, record, exception)), Collections.emptyList());
+        return new Response(ProcessingExceptionHandler.Result.from(handle(context, record, exception)), List.of());
     }
 
     @Deprecated
@@ -173,7 +173,7 @@ public interface ProcessingExceptionHandler extends Configurable {
          * @return a {@code Response} with a {@link ProcessingExceptionHandler.Result#FAIL} status.
          */
         public static Response fail() {
-            return fail(Collections.emptyList());
+            return fail(List.of());
         }
 
         /**
@@ -192,7 +192,7 @@ public interface ProcessingExceptionHandler extends Configurable {
          * @return a {@code Response} with a {@link ProcessingExceptionHandler.Result#RESUME} status.
          */
         public static Response resume() {
-            return resume(Collections.emptyList());
+            return resume(List.of());
         }
 
         /**
@@ -215,7 +215,7 @@ public interface ProcessingExceptionHandler extends Configurable {
          */
         public List<ProducerRecord<byte[], byte[]>> deadLetterQueueRecords() {
             if (deadLetterQueueRecords == null) {
-                return Collections.emptyList();
+                return List.of();
             }
             return Collections.unmodifiableList(deadLetterQueueRecords);
         }
